try h1 etc font fix at http://stackoverflow.com/a/5401177/5056120

--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -5,7 +5,3 @@
 #modal-img {
   max-height: 27em;
 }
-
-h1, h2, h3, h4, h5, h6 { /*reset for mobile browsers */
-  font-weight: normal;
-}
